tracker: Add IDs to top-level tracker boxes

https://bugzilla.gnome.org/show_bug.cgi?id=758654